css/default.css
/* ... */
.disclosure-button:hover {
    --collapse-button-background-color: var(--GW-collapse-disclosure-button-hover-color);
    --collapse-button-text-color: var(--GW-collapse-disclosure-button-text-hover-color);

    z-index: 11;
}
.disclosure-button:focus {
    outline: none;
}

/*  Top and bottom parts of disclosure button.
 */
.disclosure-button .part {
    position: absolute;
    right: 0;
    width: 100%;
    box-sizing: border-box;
    display: flex;
    align-items: stretch;
    text-decoration: underline;
    text-underline-offset: 3px;
}

.disclosure-button .part::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    background-color: var(--collapse-button-background-color);
    transition:
        background-color 0.1s ease;
}

.disclosure-button .part > span {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--collapse-button-background-color);
    transition:
        background-color 0.1s ease;
}

/*  Top part of disclosure button.
 */
.disclosure-button .part.top {
    top: 0;
    height: var(--collapse-toggle-top-height);
    justify-content: flex-end;
}

.disclosure-button .part.top .icon {
    width: var(--collapse-toggle-top-height);
    height: 100%;
    box-sizing: border-box;
    padding: calc(var(--collapse-toggle-top-height) / 4);
}

.disclosure-button .part.top .icon svg {
    height: 100%;
}
.collapse.expanded-not > .disclosure-button:hover .part.top .icon svg {
    transform: rotate(-0.25turn);
    transition:
        transform 1.0s ease;
}
.collapse.expanded > .disclosure-button .part.top .icon svg {
    transform: rotate(-0.25turn);
}
.collapse.expanded-temp:not(:hover) > .disclosure-button .part.top .icon svg {
    transform: none;
    transition:
        transform 2.0s ease-in;
}
.collapse.expanded-not.just-clicked > .disclosure-button:hover .part.top .icon svg {
    transform: none;
    transition: none;
}

.disclosure-button .part.top .label {
    padding: 0 0 0 1.25em;
}
.collapse.expanded-not > .disclosure-button .part.top .label,
.collapse.just-auto-expanded > .disclosure-button .part.top .label {
    visibility: hidden;
}
.collapse.expanded-temp:not(.just-auto-expanded) > .disclosure-button .part.top .label.fading {
    opacity: 0;
    transition:
        opacity 2.0s ease-in;
}

/*  Bottom part of disclosure button.
 */
.disclosure-button .part.bottom {
    bottom: 0;
    height: var(--collapse-toggle-bottom-height);
    justify-content: center;
}

.disclosure-button .part.bottom .label {
    padding: 0 1em;
}

/********************/
/*  Collapse summary.
 */
.collapse.has-abstract {
    padding-top: var(--collapse-toggle-top-height);
    padding-bottom: var(--collapse-toggle-bottom-height);
}

.collapse > .abstract-collapse {
    position: relative;
    z-index: 1;
}
.collapse > .abstract-collapse.abstract {
    margin-left: calc(-1 * (var(--collapse-toggle-left-width) + 2px));
}
.collapse > .abstract-collapse:not(.abstract) {
    margin-top: 0.25em;
    margin-bottom: 0.25em;
}

.collapse.expanded-not > .abstract-collapse.abstract > blockquote {
    margin: 0;
    border-color: var(--background-color);
}
.collapse.expanded-not > .disclosure-button:hover + .abstract-collapse.abstract > blockquote {
    background-color: var(--GW-abstract-collapse-blockquote-hover-color);
    border-color: var(--GW-abstract-collapse-blockquote-hover-color);
}

/************************************************/
/*  Collapsible sections (the <section> element).
 */
section.collapse {
    margin-left: calc(-1 * var(--collapse-left-offset));
    padding-left: var(--collapse-left-offset);

    margin-top: 2.5em;
    margin-bottom: 2.25em;
}

section.collapse.has-abstract,
section.collapse.expanded {
    padding-top: 0;
}

section.collapse.expanded > .disclosure-button .part.top .label {
    display: none;
}

/*  Heading.
 */
section.collapse > :first-child {
    position: relative;
    min-height: var(--collapse-toggle-top-height);
    margin:
        0
        var(--collapse-toggle-top-height)
        0
        calc(-1 * var(--collapse-toggle-left-width));
    padding: 0;
    z-index: 12;
    pointer-events: none;
}

section.collapse > :first-child > a {
    position: relative;
    pointer-events: auto;
}
section.collapse > :first-child > a,
section.collapse > :first-child > a * {
    text-shadow: none;
}

section.collapse > :first-child > a::after {
    top: -0.1em;
    left: 0.5em;
}

section.collapse > h1:first-child > a {
    top: 0.1em;
}

section.collapse > h2:first-child {
    line-height: 1.1;
}
section.collapse > h2:first-child::after {
    content: none;
}
section.collapse > h2:first-child > a {
    top: 0.15em;
}

/*  “Bare” nested sections.
 */
section > :first-child + section.collapse {
    margin-top: 0;
}

section.collapse.expanded-not > .collapse-content-wrapper {
    max-height: 0;
}

/**********************************/
/*  Collapsible non-section blocks.
 */
div.collapse.no-abstract.expanded-not > .disclosure-button {
    box-shadow: none;
}

div.collapse.expanded-not > .disclosure-button .part::before {
    opacity: 0.85;
}
div.collapse.has-abstract.expanded-not > .disclosure-button .part::before {
    opacity: 1.0;
}

/***************************/
/*  Collapsible code blocks.
 */

.sourceCode.collapse {
    margin-top: 1.75em;
    margin-bottom: 1.75em;
}
.sourceCode.collapse pre {
    margin: 0;
}
.sourceCode.collapse.expanded .sourceCode {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}
.sourceCode.collapse.expanded-not > .collapse-content-wrapper pre {
    max-height: calc(  var(--collapse-toggle-top-height)
                     + var(--collapse-toggle-bottom-height));
    box-sizing: border-box;
    overflow: hidden;
}

.sourceCode.collapse.expanded-not > .collapse-content-wrapper.width-full {
    max-width: 100%;
    margin: 0 !important;
}

.sourceCode.collapse.expanded-not > .disclosure-button .part::before {
    opacity: 0.70;
}
/* ... */

